<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textAreaScroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_1"
            android:textAllCaps="false" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option_1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option_2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option_3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option_4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/question_2"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/wakanda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/question_3"
            android:textAllCaps="false" />

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingStart="14dp"
                android:text="@string/q3_option_1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingStart="14dp"
                android:text="@string/q3_option_2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingStart="14dp"
                android:text="@string/q3_option_3"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/question_4"
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q4_option_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q4_option_2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q4_option_3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q4_option_4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q4_option_5"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/question_6"
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/checkbox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q5_option_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q5_option_2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q5_option_3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q5_option_4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:text="@string/q5_option_5"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:onClick="submitAnswers"
                android:text="@string/submit_button" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:onClick="reset"
                android:text="@string/reset_button" />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>